--- a/work/css/work.css
+++ b/work/css/work.css
@@ -2741,13 +2741,13 @@
 			.panel.color1 {
 			     background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #fff;
+				background-color: #108bd1;
 			}
 
 			.panel.color2 {
 			     background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #068e59;
+				background-color: #d8cb1d;
 			}
 
 			.panel.color3 {
@@ -2805,13 +2805,13 @@
 			.panel > *.color1 {
 			     background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #fff;
+				background-color: #108bd1;
 			}
 
 			.panel > *.color2 {
 			     background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #068e59;
+				background-color: #d8cb1d;
 			}
 
 			.panel > *.color3 {
@@ -3232,13 +3232,13 @@
 			.panel.color1 {
 				background-image: url("../../images/overlay.png"), linear-gradient(135deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #fff;
+				background-color: #108bd1;
 			}
 
 			.panel.color2 {
 				background-image: url("../../images/overlay.png"), linear-gradient(135deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
 				background-size: 128px 128px, auto;
-				background-color: #e37b7c;
+				background-color: #d8cb1d;
 			}
 
 			.panel.color3 {
